# researcher_agent

./: README.md
core/: .env.example  README.md  pyproject.toml
core/agents/base/: react.py
core/clients/common/: mcp.py  utils.py
core/clients/langgraph/: client.py
servers/: .env.example  README.md  pyproject.toml
servers/website_firecrawl_service/: crawler.py  openai.py  prompt.py  server.py  utils.py
