[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP Client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "openai>=1.43.0",
    "pydantic>=2.9.2",
    "langchain_community>=0.3.1",
    "langsmith>=0.1.129",
    "jinja2>=3.1.2",
    "langchain_openai>=0.2.14,<0.3",
    "langgraph>=0.2.60,<0.3",
    "langchain_arcade>=0.1.2,<0.2.0",
    "arcadepy >= 0.1.0, <0.2.0",
    "httpx >= 0.27.1, <0.28.0",
]

[[project.authors]]
name = "lgesuellip"
email = "lgesuellipinto@uade.edu.ar"

[tool.hatch.build.targets.wheel]
packages = ["agents", "clients"]

[project.scripts]
react-agent = "agents.base.react:main"
