[project]
name = "website-firecrawl-service"
version = "0.1.0"
description = "This tool leverages Firecrawl to generate concise summaries of web pages directly from their URLs. Firecrawl processes the content of the provided website, extracting key insights and metadata to deliver a brief, focused summary."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "openai>=1.43.0",
    "pydantic>=2.9.2",
    "langchain_community>=0.3.1",
    "langsmith>=0.1.129",
    "tenacity>=8.5.0",
    "firecrawl>=1.0.0",
    "jinja2>=3.1.2",
    "beautifulsoup4>=4.12.3"
]

[[project.authors]]
name = "lgesuellip"
email = "lautaro@pampa.ai"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
website-firecrawl-service = "website_firecrawl_service:main"
